--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "typescript-fsa": "^3.0.0-beta-2",
         "typescript-fsa-reducers": "^1.2.1"
     },
-    "homepage": "https://nicolaserny.github.io/react-gojs-example/",
+    "homepage": ".",
     "devDependencies": {
         "@types/jest": "^24.0.13",
         "@types/node": "^12.0.7",
